--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/comp426-2022-spring/a04-kapoole/issues"
   },
-  "homepage": "https://github.com/comp426-2022-spring/a04-kapoole#readme"
+  "homepage": "https://github.com/comp426-2022-spring/a04-kapoole#readme",
+  "dependencies": {
+    "better-sqlite3": "^7.5.1",
+    "express": "^4.18.1",
+    "minimist": "^1.2.6",
+    "morgan": "^1.10.0"
+  }
 }
